--- a/Templates/base.html
+++ b/Templates/base.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Admin Panel</a>
-        <!-- Add your navigation links here -->
+        <a class="navbar-brand" href="/">Admin Panel</a>
+        <h3 class="navbar-brand" >|</h3>
+        <a class="navbar-brand" href="#">Blog List</a>
     </nav>
 
     <div class="container mt-4">
