--- a/Templates/base.html
+++ b/Templates/base.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="/">Admin Panel</a>
+        <a class="navbar-brand" href="/">Dashboard</a>
         <h3 class="navbar-brand" >|</h3>
-        <a class="navbar-brand" href="#">Blog List</a>
+        <a class="navbar-brand" href="/blogList">Blog List</a>
     </nav>
 
     <div class="container mt-4">
